# dbt-home-playground

./: .gitignore  README.md  pyproject.toml
dbt-start-out-tutorial/: commands.txt  docker-compose.yaml
dbt-start-out-tutorial/DDL/: create_tables.sql
dbt-start-out-tutorial/demo_with_postgres/: .user.yml  dbt_project.yml  profiles.yml
dbt-start-out-tutorial/demo_with_postgres/models/lab/: schema.yml  user_post_count.sql
jaffle_shop_duckdb/: .user.yml  commands.txt  dbt_project.yml
jaffle_shop_duckdb/models/sources/: src_customers.sql  src_orders.sql  src_payments.sql  src_schema.yml
jaffle_shop_duckdb/models/staging/: stg_customers.sql  stg_orders.sql  stg_payments.sql
simple_dbt_project/: commands
simple_dbt_project/images/: output.graphviz
sql-window-functions-explaned/init-db/: create_csv_from_sql.py  create_db_from_csv.py  employee.duckdb  employees.csv  employees.sql  expenses.csv
sql-window-functions-explaned/part_1.window_and_functions/: aggregation.sql  compare_by_offset.sql  rank.sql  rolling_aggregate.sql
sql-window-functions-explaned/part_2.frame/: rows_and_groups.sql
