[tool.poetry]
name = "dbt-home-playground"
version = "0.1.0"
description = ""
authors = ["Trung Nghĩa Hoàng <46636991+trungnghiahoang96@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "dbt_home_playground"}]

[tool.poetry.dependencies]
python = "^3.8"
dbt-duckdb = "^1.5.1"
duckdb = "^0.8.1"
duckcli = "^0.2.1"
dbt-core = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
